# geometry

./: .gitignore  CMakeLists.txt  README.md  common.h  main.cc  pch.h
boolean2d/: BooleanVertex.cc  BooleanVertex.h  boolean_geometry_pch.h  boolean_pch.h  boolean_vertex.cc  boolean_vertex.h  boost_geometry.h  boost_polygon.h  polygon_chain.cc  polygon_chain.h  polygon_chain_test.cc  priority_queue.cc  priority_queue.h  test_algorithm.h
boolean2d/sweep_line/: point2d.h  point_event.cc  point_event.h  red_black_tree.h  segment.cc  segment.h  sweep_line.cc  sweep_line.h
geo2d/: algorithm.cc  algorithm.h  algorithm_test.cc  point.cc  point.h
sindy2d/: SindyCalculate.cc  SindyCalculate.h  SindyExtents2d.cc  SindyExtents2d.h  SindyPoint2d.cc  SindyPoint2d.h  sindy_arc2d.cc  sindy_arc2d.h  sindy_bezier2d.cc  sindy_bezier2d.h  sindy_box2d.cc  sindy_box2d.h  sindy_calculate.cc  sindy_calculate.h  sindy_edges.cc  sindy_edges.h  sindy_ellipse2d.cc  sindy_ellipse2d.h  sindy_extents2d.cc  sindy_extents2d.h  sindy_geometry.cc  sindy_geometry.h  sindy_math.cc  sindy_math.h  sindy_point2d.cc  sindy_point2d.h  sindy_polygon2d.cc  sindy_polygon2d.h  sindy_polyline2d.cc  sindy_polyline2d.h  sindy_segment2d.cc  sindy_segment2d.h
test/: BooleanTest202306.cc  CMakeLists.txt  test.cc  wykobi_line_test.cc
test/sindy2d/: sindy_arc2d_test.cc
